--- a/client/src/pages/panel/panel.css
+++ b/client/src/pages/panel/panel.css
@@ -64,7 +64,6 @@ footer {
     background-color: #20cf5b;
 }
 
-
 main {
     width: 100%;
     display: flex;
@@ -77,17 +76,22 @@ main {
     margin: 15px;
     border-radius: 5px;
     box-shadow: 1px 1px 5px #3f3f3f;
-    color: white;
+    color: #fefefe;
     font-size: 16px;
     min-width: 120px;
 }
 
 .server-toggle-enabled {
-    background: linear-gradient(0.45turn, hsl(var(--server-toggle-enabled), 75%, 65%), hsl(var(--server-toggle-enabled), 45%, 70%));
+    background: linear-gradient(0.45turn, hsl(var(--server-toggle-enabled), 75%, 65%), hsl(var(--server-toggle-enabled), 45%, 80%));
 }
 
 .server-toggle-disabled {
-    background: linear-gradient(0.25turn, hsl(var(--server-toggle-disabled), 75%, 65%), hsl(var(--server-toggle-disabled), 25%, 75%));
+    background: linear-gradient(0.45turn, hsl(var(--server-toggle-disabled), 75%, 65%), hsl(var(--server-toggle-disabled), 65%, 70%));
+}
+
+button[disabled] {
+    background: linear-gradient(#5f5f5f, #4d4d4d);
+    color: #bdbdbd;
 }
 
 .rcon-wrapper {
@@ -114,6 +118,24 @@ input {
     font-size: 16px;
 }
 
+.loading {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 3px lightgray solid;
+    border-top: 3px transparent solid;
+    animation: rotate 500ms ease infinite;
+}
+
+@keyframes rotate {
+    0% {
+        rotate: 0deg;
+    }
+    100% {
+        rotate: 359deg;
+    }
+}
+ 
 @media (max-width: 800px) {
     .header-caption {
         font-size: 18px;
