some lib updates & a lil bit of panel ui functionality

--- a/client/src/assets/css/globals.css
+++ b/client/src/assets/css/globals.css
@@ -29,4 +29,27 @@ main {
 .icon {
     width: 20px;
     height: 20px;
+    background-repeat: no-repeat;
+}
+
+.hidden {
+    display: none;
+}
+
+.loading {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 3px lightgray solid;
+    border-top: 3px transparent solid;
+    animation: rotate 500ms ease-in-out infinite;
+}
+
+@keyframes rotate {
+    0% {
+        rotate: 0deg;
+    }
+    100% {
+        rotate: 719deg;
+    }
 }
