--- a/client/src/assets/css/globals.css
+++ b/client/src/assets/css/globals.css
@@ -17,8 +17,17 @@
 
 footer {
     width: 100%;
-    height: 30px;
     background-color: black;
+    padding: 10px;
+    font-size: 16px;
+}
+footer a {
+    color: #cfcfcf;
+    text-decoration: none;
+    transition: 0.1s;
+}
+footer a:hover {
+    color: #b9b9b9;
 }
 .header-caption {
     color: var(--header-text-color);
