--- a/client/src/pages/servers/servers.css
+++ b/client/src/pages/servers/servers.css
@@ -17,6 +17,8 @@ li {
     background-position: 0px 100% !important;
     background-size: 10px 200% !important;
     transition: 250ms ease;
+    background: linear-gradient(#3a79cc, #7b90d4, #3a79cc);
+    display: flex;
 }
 
 .players {
@@ -24,11 +26,19 @@ li {
     font-size: 18px;
 }
 
-.online {
-    background: linear-gradient(#757575 -30%, #4dff4d, #757575 130%);
+.online::after {
+    content: '';
+    width: 7px;
+    margin-left: 5px;
+    background: linear-gradient(#169e1c, #35833b);
+    border-radius: 15px;
 }
-.offline {
-    background: linear-gradient(#757575 -30%, #ff4d4d, #757575 130%);
+.offline::after {
+    content: '';
+    width: 7px;
+    margin-left: 5px;
+    background: linear-gradient(#be2626, #a34f4f);
+    border-radius: 15px;
 }
 li:hover {
     background-position: 0px 0px !important;
