--- a/client/src/assets/css/globals.css
+++ b/client/src/assets/css/globals.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
+    text-decoration: none;
 }
 
 :root {
@@ -35,7 +36,6 @@ footer a:hover {
     padding-left: 15px;
 }
 .exit {
-    margin-left: 15px;
     background-image: url("../icons/exit.svg");
 }
 
