--- a/client/src/pages/panel/panel.css
+++ b/client/src/pages/panel/panel.css
@@ -59,8 +59,21 @@ main {
     background: linear-gradient(0.45turn, hsl(var(--server-toggle-enabled), 75%, 45%), hsl(var(--server-toggle-enabled), 45%, 60%));
 }
 
+.aexit {
+    margin-top: 35px;
+    color: #3a3a3a;
+    display: flex;
+    background-color: #a0a0a0;
+    padding: 5px;
+    border-radius: 5px;
+}
+
 .server-toggle-disabled {
     background: linear-gradient(0.45turn, hsl(var(--server-toggle-disabled), 55%, 60%), hsl(var(--server-toggle-disabled), 45%, 50%));
+}
+
+.grid {
+    display: grid;
 }
 
 button[disabled] {
