--- a/client/src/assets/css/globals.css
+++ b/client/src/assets/css/globals.css
@@ -15,10 +15,9 @@
     --header-text-color: #d4d9f7;
 }
 
-
 footer {
     width: 100%;
-    background-color: black;
+    background-color: #0f0f0f;
     padding: 10px;
     font-size: 16px;
 }
@@ -34,6 +33,18 @@ footer a:hover {
     color: var(--header-text-color);
     font-size: 28px;
     padding-left: 15px;
+}
+nav {
+    display: flex;
+    flex-direction: space-between;
+    gap: 10px;
+    width: 100%;
+    padding: 5px 0;    
+    background-color: #242f52;
+}
+.return {
+    display: flex;
+    color: #cfcfcf;
 }
 .exit {
     background-image: url("../icons/exit.svg");
@@ -70,7 +81,7 @@ main {
 
 header {
     width: 100%;
-    height: 60px;
+    height: 50px;
     background-color: var(--header-color);
     display: flex;
     align-items: center;
@@ -91,5 +102,14 @@ header {
     }
     100% {
         rotate: 719deg;
+    }
+}
+
+@media (max-width: 800px) {
+    header {
+        height: 40px;
+    }
+    .header-caption {
+        font-size: 20px;
     }
 }
