--- a/client/src/pages/panel/panel.css
+++ b/client/src/pages/panel/panel.css
@@ -59,15 +59,6 @@ main {
     background: linear-gradient(0.45turn, hsl(var(--server-toggle-enabled), 75%, 45%), hsl(var(--server-toggle-enabled), 45%, 60%));
 }
 
-.aexit {
-    margin-top: 35px;
-    color: #3a3a3a;
-    display: flex;
-    background-color: #a0a0a0;
-    padding: 5px;
-    border-radius: 5px;
-}
-
 .server-toggle-disabled {
     background: linear-gradient(0.45turn, hsl(var(--server-toggle-disabled), 55%, 60%), hsl(var(--server-toggle-disabled), 45%, 50%));
 }
@@ -87,8 +78,11 @@ input {
 }
  
 @media (max-width: 800px) {
+    header {
+        height: 40px;
+    }
     .header-caption {
-        font-size: 18px;
+        font-size: 20px;
     }
     .control-wrapper {
         width: 100%;
