--- a/client/src/pages/panel/panel.css
+++ b/client/src/pages/panel/panel.css
@@ -53,6 +53,7 @@ main {
     color: #fefefe;
     font-size: 16px;
     min-width: 120px;
+    cursor: pointer;
 }
 
 .server-toggle-enabled {
@@ -63,8 +64,10 @@ main {
     background: linear-gradient(0.45turn, hsl(var(--server-toggle-disabled), 55%, 60%), hsl(var(--server-toggle-disabled), 45%, 50%));
 }
 
-.grid {
-    display: grid;
+.error-output {
+    background-color: #742e2f;
+    color: white;
+    border-radius: 15px;
 }
 
 button[disabled] {
